# edgesentinel

./: .coverage  .gitignore  README-EN.md  README-PTBR.md  README.md  USAGE-EN.md  USAGE-PTBR.md  USAGE.md  config.yaml  pyproject.toml
adapters/actions/: base.py  gpio.py  log.py  registry.py  webhook.py
adapters/exporter/: metrics.py  otel.py  prometheus.py
adapters/inference/: base.py  dummy.py  onnx.py  registry.py  remote.py  tflite.py  yolo.py
adapters/sensors/: base.py  camera.py  camera_simulated.py  cpu_temp.py  cpu_usage.py  memory_usage.py  registry.py  simulated.py
ai-inference-service/: Dockerfile  main.py  models.yaml  requirements-slim.txt  requirements.txt
ai-inference-service/core/: base.py  registry.py
ai-inference-service/exporter/: otel.py
ai-inference-service/models/: onnx.py  yolo.py
application/: engine.py  monitor.py  pipeline.py
cli/: builder.py  doctor.py  main.py  simulate.py
config/: loader.py  mapper.py  schema.py
core/: entities.py  ports.py  rules.py
dashboards/: edgesentinel.json  edgesentinel_dashboard_v2.json
infra/docker/: docker-compose.yml  mediamtx.yml  otel-collector.yml  prometheus.yml
models/: anomaly.onnx  scaler.onnx
scripts/: train_model.py
tests/: conftest.py
tests/adapters/: test_dummy_inference.py  test_log_action.py  test_sensors.py
tests/application/: test_engine.py
tests/config/: test_loader.py
tests/core/: test_entities.py  test_rules.py
tests/integration/: test_ai_service.py  test_onnx_inference.py  test_pipeline_integration.py  test_simulate_scenarios.py
