[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edgesentinel"
version = "0.1.0"
description = "Observabilidade inteligente para dispositivos Linux embarcados"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pyyaml>=6.0",
    "prometheus-client>=0.19",
]

[project.optional-dependencies]
onnx   = ["onnxruntime>=1.17", "numpy>=1.24"]
tflite = ["tflite-runtime>=2.14", "numpy>=1.24"]
gpio   = ["gpiozero>=2.0"]

[project.scripts]
edgesentinel = "cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*", "core*", "config*", "adapters*", "application*"]