[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edgesentinel"
version = "0.1.0"
description = "Observabilidade inteligente para dispositivos Linux embarcados"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pyyaml>=6.0",
    "prometheus-client>=0.19",
    "numpy>=1.24",
]

[project.optional-dependencies]
onnx   = ["onnxruntime>=1.17"]
tflite = ["tflite-runtime>=2.14"]
gpio   = ["gpiozero>=2.0"]
camera = ["opencv-python>=4.8", "ultralytics>=8.0"]
otel   = [
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
    "opentelemetry-exporter-prometheus>=0.40",
]
all    = [
    "onnxruntime>=1.17",
    "tflite-runtime>=2.14",
    "gpiozero>=2.0",
    "opencv-python>=4.8",
    "ultralytics>=8.0",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
    "opentelemetry-exporter-prometheus>=0.40",
]

[project.scripts]
edgesentinel = "cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*", "core*", "config*", "adapters*", "application*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]